Lesson 4: add appeals (web and api) (#4)
* Lesson 4: add appeals (web and api)

* Lesson 4: fix errors, add regex
