# api-docs.json
@@ -14,6 +14,9 @@
     "paths": {
         "\/api\/pages": {
             "get": {
+                "tags": [
+                    "pages"
+                ],
                 "summary": "Display a listing of the resource",
                 "responses": {
                     "200": {
@@ -45,6 +48,9 @@
         },
         "\/api\/pages\/{page}": {
             "get": {
+                "tags": [
+                    "pages"
+                ],
                 "summary": "Display the specified resource",
                 "parameters": [
                     {
@@ -80,6 +86,9 @@
         },
         "\/api\/news": {
             "get": {
+                "tags": [
+                    "news"
+                ],
                 "summary": "Display a listing of the resource",
                 "responses": {
                     "200": {
@@ -111,6 +120,9 @@
         },
         "\/api\/news\/{news}": {
             "get": {
+                "tags": [
+                    "news"
+                ],
                 "summary": "Display the specified resource",
                 "parameters": [
                     {
@@ -143,10 +155,75 @@
                     }
                 }
             }
+        },
+        "\/api\/appeal": {
+            "post": {
+                "tags": [
+                    "appeals"
+                ],
+                "summary": "Send appeal",
+                "requestBody": {
+                    "description": "Store new appeal into database",
+                    "content": {
+                        "application\/json": {
+                            "schema": {
+                                "$ref": "#\/components\/schemas\/Appeal"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Appeal created"
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
+                        "content": {
+                            "application\/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "The email must be a valid email address."
+                                        },
+                                        "errors": {
+                                            "type": "array",
+                                            "example": {
+                                                "email": "The email must be a valid email address.",
+                                                "name": "Name field is required"
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "components": {
         "schemas": {
+            "Appeal": {
+                "type": "object",
+                "properties": {
+                    "name": {
+                        "type": "string"
+                    },
+                    "phone": {
+                        "type": "string",
+                        "nullable": true
+                    },
+                    "email": {
+                        "type": "string",
+                        "nullable": true
+                    },
+                    "message": {
+                        "type": "string"
+                    }
+                }
+            },
             "News": {
                 "type": "object",
                 "properties": {
